Add redirection map from the old OSG documentation
Add a RewriteMap to the apache.conf
Add a txt map with mappings from the identifying integer to path at current docs
Update both docker containers to include this mapping update

--- a/examples/apache.conf
+++ b/examples/apache.conf
@@ -2,6 +2,11 @@
   ServerName osg-portal.osgdev.chtc.io
   ServerAdmin example@morgridge.org
 
+  RewriteEngine on
+  LogLevel alert rewrite:trace2
+  RewriteMap freshdesk2documentation "txt:/etc/apache2/freshdesk2documentation.txt"
+  RewriteRule "^/documentation/([0-9]+).*" "/documentation/${freshdesk2documentation:$1}" [R=302,L]
+
   # This is the OIDC callback path
   Alias /documentation /srv/documentation
 
