--- a/Dockerfile.testing
+++ b/Dockerfile.testing
@@ -27,6 +27,7 @@ RUN pip3 install -U pip && pip3 install -r /opt/portal/requirements.txt
 COPY register.py /usr/bin
 COPY supervisor-apache.conf /etc/supervisord.d/40-apache.conf
 COPY examples/apache.conf /etc/httpd/conf.d/
+COPY examples/freshdesk2documentation.txt /etc/apache2/
 
 ENV CONFIG_DIR=/srv
 #ENTRYPOINT ["/opt/portal/run_local.sh"]
