--- a/.github/workflows/publish-container.yml
+++ b/.github/workflows/publish-container.yml
@@ -9,7 +9,11 @@ on:
   repository_dispatch:
     types:
       - dispatch-build
-
+  workflow_call:
+    inputs:
+      tag:
+        required: false
+        type: string
 jobs:
 
   build:
@@ -20,6 +24,14 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: 'recursive'
+
+    - name: Set the tag value if workflow_call
+      if: "${{ github.event.inputs.tag != '' }}"
+      run: GITHUB_TAG=${{ github.event.inputs.tag }}
+
+    - name: Set the tag value if not workflow_call
+      if: "${{ github.event.inputs.tag == '' }}"
+      run: GITHUB_TAG=${GITHUB_REF##*/v}
 
     - name: Generate tag list
       id: generate-tag-list
@@ -35,7 +47,7 @@ jobs:
           ITB_SUFFIX=""
         fi
         
-        tag_list=()
+        tag_list=()=
         for registry in hub.opensciencegrid.org docker.io; do
           for image_tag in "latest${ITB_SUFFIX}" "${GITHUB_TAG}"; do
             tag_list+=("$registry/$docker_repo":"$image_tag")
