Update the github action
Remove the use of an advanced permission GHA token in favor of information passing

--- a/.github/workflows/release-documentation-update.yml
+++ b/.github/workflows/release-documentation-update.yml
@@ -48,7 +48,7 @@ jobs:
   Call-publish-container:
     if: startsWith(github.repository, 'osg-htc/')
     needs: Publish-New-Release
-    uses: osg-htc/osg-portal/.github/workflows/publish-container.yml
+    uses: osg-htc/osg-portal/.github/workflows/publish-container.yml@master
     with:
       tag: ${{ needs.Publish-New-Release.outputs.tag }}
 
