Allow secrets to be inherited

--- a/.github/workflows/publish-container.yml
+++ b/.github/workflows/publish-container.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Generate tag list
       id: generate-tag-list
       run: |
-        echo "${{github.event.inputs.tag}}"
+        echo "${{github.event.inputs}}"
         
         docker_repo=${GITHUB_REPOSITORY/osg-htc/opensciencegrid}
         
