Allow secrets to be inherited

--- a/.github/workflows/release-documentation-update.yml
+++ b/.github/workflows/release-documentation-update.yml
@@ -52,4 +52,4 @@ jobs:
     secrets: inherit
     with:
       tag: ${{ needs.publish-new-release.outputs.tag }}
-
+      test: "This is a test input"
