--- a/.github/workflows/release-documentation-update.yml
+++ b/.github/workflows/release-documentation-update.yml
@@ -51,5 +51,4 @@ jobs:
     uses: osg-htc/osg-portal/.github/workflows/publish-container.yml@master
     secrets: inherit
     with:
-      tag: ${{ needs.publish-new-release.outputs.tag }}
-      test: "This is a test input"
+      tag: ${{ toJSON(needs.publish-new-release) }}
