--- a/.github/workflows/publish-container.yml
+++ b/.github/workflows/publish-container.yml
@@ -24,6 +24,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: 'recursive'
+        ref: master                              # Needed or it will checkout the wrong commit
 
     - name: Generate tag list
       id: generate-tag-list
