--- a/.github/workflows/publish-container-manual.yml
+++ b/.github/workflows/publish-container-manual.yml
@@ -1,14 +1,12 @@
-name: Build and Push Docker Image
+name: Build and Push Docker Image with new Tag
 
 on:
-  repository_dispatch:
-    types:
-      - dispatch-build
-  workflow_call:
-    inputs:
-      tag:
-        required: false
-        type: string
+  push:
+    tags:
+      - v[0-9]+.[0-9]+.[0-9]+                    # Production Tag
+      - v[0-9]+.[0-9]+.[0-9]+.[0-9]+             # Production Tag with Incremented Doc
+      - v[0-9]+.[0-9]+.[0-9]+.itb.[0-9]+         # Development Tag
+
 jobs:
 
   build:
@@ -19,7 +17,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: 'recursive'
-        ref: master                              # Needed or it will checkout the wrong commit
+        ref: ${{ github.ref }}
 
     - name: Generate tag list
       id: generate-tag-list
@@ -51,7 +49,7 @@ jobs:
         fi
         
         tag_list=()
-        for registry in hub.opensciencegrid.org docker.io; do
+        for registry in hub.opensciencegrid.org; do
           for image_tag in "latest${ITB_SUFFIX}" "${GITHUB_TAG}" "$(git rev-parse HEAD)"; do
             tag_list+=("$registry/$docker_repo":"$image_tag")
           done
@@ -63,13 +61,6 @@ jobs:
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
-
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v1
-      continue-on-error: true
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Log in to OSG Harbor
       uses: docker/login-action@v1
