--- a/.github/workflows/publish-container.yml
+++ b/.github/workflows/publish-container.yml
@@ -1,11 +1,6 @@
-name: Build and Push Docker Image
+name: Build and Push Docker Image Automatically
 
 on:
-  push:
-    tags:
-      - v[0-9]+.[0-9]+.[0-9]+                    # Production Tag
-      - v[0-9]+.[0-9]+.[0-9]+.[0-9]+             # Production Tag with Incremented Doc
-      - v[0-9]+.[0-9]+.[0-9]+.itb.[0-9]+         # Development Tag
   repository_dispatch:
     types:
       - dispatch-build
@@ -56,7 +51,7 @@ jobs:
         fi
         
         tag_list=()
-        for registry in hub.opensciencegrid.org docker.io; do
+        for registry in hub.opensciencegrid.org; do
           for image_tag in "latest${ITB_SUFFIX}" "${GITHUB_TAG}" "$(git rev-parse HEAD)"; do
             tag_list+=("$registry/$docker_repo":"$image_tag-$(date +%s)")
           done
@@ -68,13 +63,6 @@ jobs:
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
-
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v1
-      continue-on-error: true
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Log in to OSG Harbor
       uses: docker/login-action@v1
