--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 certifi==2022.6.15
 cffi==1.15.1
 charset-normalizer==2.1.0
-click==8.1.3
+click
 cryptography==37.0.4
 Flask==2.1.3
 Flask-Assets==2.0
