--- a/supervisor-apache.conf
+++ b/supervisor-apache.conf
@@ -1,5 +1,5 @@
 
 [program:httpd]
-command=/bin/bash -c "source /etc/sysconfig/httpd && exec /usr/sbin/httpd $OPTIONS -DFOREGROUND"
+command=/bin/bash -c "exec /usr/sbin/httpd $OPTIONS -DFOREGROUND"
 autorestart=true
 
